Applied draft OpenModelProfile from EAGLE with ext/spec changes
- had to temporarily update the stylesheet to hide all stereotypes to
avoid clutter due to OpenModelElement stereotype being displayed

--- a/TransportAPI/UML/OpenModelClassDiagram.css
+++ b/TransportAPI/UML/OpenModelClassDiagram.css
@@ -1,3 +1,10 @@
+[appliedStereotypes~="OpenModelElement"] > Label[type="StereotypeLabel"] {
+	visible: false;
+}
+[appliedStereotypes~="OpenModelElement"] > Label:Stereotype {
+	visible: false;
+}
+
 Class > Compartment[kind="operations"] {
     visible:false;
 }
@@ -27,5 +34,13 @@ Operation {
 }
 
 Operation > Label[type=StereotypeLabel]{
+	visible:false;
+}
+
+Association > Label:SourceRole {
+	visible:false;
+}
+
+Association > Label:TargetRole {
 	visible:false;
 }	
