Initial updates to OTSi model after Photonic Media model considerations

--- a/UML/TapiClassDiagram.css
+++ b/UML/TapiClassDiagram.css
@@ -4,3 +4,15 @@ Association > Label:SourceRole {
 
 Association > Label:TargetRole {
 	visible:false;}		
+
+Label[type=StereotypeLabel][stereotype="OpenModel_Profile::StrictComposite"]{
+    visible:true;
+}
+
+Label[type=StereotypeLabel][stereotype="OpenModel_Profile::ExtendedComposite"]{
+    visible:true;
+}
+
+Label[type=StereotypeLabel][stereotype="OpenModel_Profile::Specify"]{
+    visible:true;
+}
