Some modifications for 2.5
- TapiCommon: deleted the deprecated AlarmName and PmParameterName
identities.
- TapiCommon: added some PM_FEC error counters to PM identity.
- TapiDigitalOtn: deleted the deprecated OtnAlarmConditionName.
- TapiPhotonicMedia: new import of tapi-path-computation, for the new
photonic-position structure, augmenting include/exclude Node/Link
Partition.
- TapiOam: added some experimental classes:
  + oam-pm-data augments CEP.
  + new classes composed by OamContext: cep-fm-data, mip-pm-data,
mep-pm-data, cep-pm-data, oam-job-service, oam-job-descriptor.
  + ConnectivityOamService, added connectivity-oam-service-parameters,
for the OAM parameters which are applicable to the whole Connectivity
Service (e.g. general enabling of alarms of a service).
  + New class OamJobService composes new class PmParameterConfig.
- TapiOam: ConnectivityOamService --> ConnectivityOamServicePoint from
1..* to *, i.e. a ConnectivityOamService instance may not have any
service point.
- All modules: Added 2.5 revision to all yangs.

--- a/UML/TapiClassDiagram.css
+++ b/UML/TapiClassDiagram.css
@@ -16,3 +16,22 @@ Label[type=StereotypeLabel][stereotype="OpenModel_Profile::ExtendedComposite"]{
 Label[type=StereotypeLabel][stereotype="OpenModel_Profile::Specify"]{
     visible:true;
 }
+
+ClassDiagram Class.BoldLines {
+	fontName:"Segoe UI";
+	fillColor:#B897C0;
+	transparency:0;
+	gradient:#FFFFFF vertical;
+	lineColor:#FF0000;
+	lineWidth:-1
+}
+
+ClassDiagram Class.BoldLines {
+	fontName:"Segoe UI";
+	fillColor:#B897C0;
+	transparency:0;
+	gradient:#FFFFFF vertical;
+	lineColor:#FF0000;
+	lineWidth:-1
+}
+
